--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fix-It Felix Jr</title>
+    <script src="./lib/phaser.js"></script>
+    <script src="./src/scenes/menu.js"></script>
+    <script src="./src/scenes/play.js"></script>
+    <script src="./src/mains.js"></script>
+
+
+
 </head>
 <body>
     
