--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./lib/phaser.js"></script>
     <script src="./src/scenes/menu.js"></script>
     <script src="./src/scenes/play.js"></script>
-    <script src="./src/mains.js"></script>
+    <script src="./src/main.js"></script>
 
 
 
