adding instruction scene

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Fix-It Felix Jr</title>
     <script src="./lib/phaser.js"></script>
     <script src="./src/scenes/menu.js"></script>
+    <script src="./src/scenes/instuctions.js"></script>
     <script src="./src/scenes/play.js"></script>
     <script src="./src/main.js"></script>
 
