--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./src/scenes/menu.js"></script>
     <script src="./src/scenes/instuctions.js"></script>
     <script src="./src/scenes/play.js"></script>
+    <script src="./src/scenes/gameover.js"></script>
     <script src="./src/main.js"></script>
 
 
