--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./src/scenes/instuctions.js"></script>
     <script src="./src/scenes/play.js"></script>
     <script src="./src/scenes/gameover.js"></script>
+    <script src="./src/scenes/victory.js"></script>
     <script src="./src/main.js"></script>
 
 
